addObject() with KX_FontObject and overlay scene #43724

Closed
opened 2015-02-18 14:35:45 +01:00 by Laurent Boiron · 7 comments

In blender 2.73a and older, when I try to add a KX_FontObject in an overlay scene with overlay.addObject(...), the object is created in the base scene and not the overlay.
This bug only appears when the code is called from a controller owned by an object that is not in the overlay scene (the "base scene")

in KX_FontObject.cpp : 118

void KX_FontObject::ProcessReplica()
{
	KX_GameObject::ProcessReplica();
	KX_GetActiveScene()->AddFont(this); //looks like it adds the font object in the wrong scene
}

Here is a blend file to reproduce the bug:
overlay_addobject_text.blend

And this is the quick hack i propose to fix it:
hack.patch
It simply check in addObject() method, if the object to add is a font object then adds it in the right scene.

I dont think it is the best solution but, in my opinion, it is the less intrusive.

In blender 2.73a and older, when I try to add a KX_FontObject in an overlay scene with overlay.addObject(...), the object is created in the base scene and not the overlay. This bug only appears when the code is called from a controller owned by an object that is not in the overlay scene (the "base scene") in **KX_FontObject.cpp : 118** ``` void KX_FontObject::ProcessReplica() { KX_GameObject::ProcessReplica(); KX_GetActiveScene()->AddFont(this); //looks like it adds the font object in the wrong scene } ``` Here is a blend file to reproduce the bug: [overlay_addobject_text.blend](https://archive.blender.org/developer/F144453/overlay_addobject_text.blend) And this is the quick hack i propose to fix it: [hack.patch](https://archive.blender.org/developer/F144457/hack.patch) It simply check in addObject() method, if the object to add is a font object then adds it in the right scene. I dont think it is the best solution but, in my opinion, it is the less intrusive.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @LaurentBoiron

Added subscriber: @LaurentBoiron
Author

This bug can also lead to a segfault after calling endObject()

This bug can also lead to a segfault after calling endObject()

Added subscriber: @panzergame

Added subscriber: @panzergame

I think it's a bad way to keep a behavior which can cause crashes and just revert it after in an other function.

I think it's a bad way to keep a behavior which can cause crashes and just revert it after in an other function.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Jorge Bernal self-assigned this 2015-03-15 10:57:24 +01:00
Member

Closed by @panzergame commit 176ecd9c9

Thanks for reporting.

Closed by @panzergame commit 176ecd9c9 Thanks for reporting.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43724
No description provided.